fix for dream journal alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -100,6 +100,9 @@ label {
   font-size: 17px;
   color: rgb(243, 55, 55);
 }
+.dream-journal-list {
+  width: 100%;
+}
 .dream-journal-list a {
   font-size: 18px;
 }
@@ -116,11 +119,12 @@ label {
   width: 90%;
 }
 .dream-journal-containter h1 {
-  display: inline;
+  display: inline-block;
+  margin: 0 0 10px 0;
 }
 .new-dream {
   float: right;
-  margin: 5px;
+  margin-top: 5px;
 }
 .dream-journal-list td {
   padding: 8px 7px 0 0;
